cbpp-configs (10.0) unstable; urgency=low

  * Update package dependencies
  * Update pbuilderrc
  * Change GIMP config to not look horrible

 -- Ben Young <computermouth@crunchbangplusplus.org>  Sun, 12 May 2019 14:03:43 -0800
 
cbpp-configs (9.0) unstable; urgency=low

  * Nineing
  * Move cbpp-slim contents here

 -- Ben Young <computermouth@crunchbangplusplus.org>  Mon, 27 Feb 2017 23:23:43 -0800
 
cbpp-configs (1.4) unstable; urgency=low

  * Switch power management back to xfce4-power-manager
  * Fixed duplicate nm-applet icon
  * Launche xfce power manager from power settings in OB menu

 -- Ben Young <computermouth@crunchbangplusplus.org>  Sun, 26 June 2016 15:44:43 -0600

cbpp-configs (1.3) unstable; urgency=low

  * Url fixes and Openbox menu.xml typo fix --jlacroix82

 -- Ben Young <computermouth@crunchbangplusplus.org>  Tue, 23 Sept 2015 23:44:43 -0600

cbpp-configs (1.2) unstable; urgency=low

  * Refactored Openbox menu.xml to fix obmenu parsing. --jlacroix82

 -- Ben Young <computermouth@crunchbangplusplus.org>  Tue, 22 Sept 2015 23:57:43 -0600

cbpp-configs (1.1) unstable; urgency=low

  * Added dmenu list suggestion population (credit xa2rd)

 -- Ben Young <computermouth@crunchbangplusplus.org>  Tue, 17 Feb 2015 23:57:43 -0600

cbpp-configs (1.0) unstable; urgency=low

  * Modified openbox/menu.xml rc.xml, geany.conf, and gmrunrc to be terminal-agnostic (credit nfultz)
  * Rebuild for cbpp with newer debian standards
  * Removed cb-* branding
  * Fixed Edit Default Applications openbox entry.
  * Removed depracated --fileman flag from catfish thunar launcher.
  * Removed conkywonky, replaced with direct command to kill the process.
  * Rolled cb-/cbpp-slim into this package
  * Fixed .gtk-bookmarks issue.

 -- Ben Young <computermouth@crunchbangplusplus.org>  Tue, 17 Feb 2015 23:57:43 -0600

cb-configs (20130504-2) unstable; urgency=low

  * Fix missing id attribute for Openbox notifications submenu.
