@@ -42,7 +42,7 @@ nm-applet &
 mate-volume-control-applet &
 
 ## Enable power management
-xfce4-power-manager &
+mate-power-manager &
 
 ## Start Thunar Daemon
 thunar --daemon &
