@@ -338,7 +338,7 @@
 			</item>
 			<item label="Power Management">
 				<action name="Execute">
-					<execute>xfce4-power-manager-settings</execute>
+					<execute>mate-power-preferences</execute>
 				</action>
 			</item>
 			<item label="Screensaver">
