@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<channel name="xfce4-power-manager" version="1.0">
-  <property name="xfce4-power-manager" type="empty">
-    <property name="power-button-action" type="empty"/>
-    <property name="brightness-switch-restore-on-exit" type="int" value="1"/>
-    <property name="brightness-switch" type="int" value="0"/>
-    <property name="show-tray-icon" type="int" value="1"/>
-    <property name="inactivity-on-battery" type="uint" value="30"/>
-    <property name="critical-power-action" type="uint" value="3"/>
-    <property name="inactivity-on-ac" type="uint" value="45"/>
-    <property name="presentation-mode" type="bool" value="false"/>
-    <property name="sleep-button-action" type="uint" value="3"/>
-    <property name="hibernate-button-action" type="uint" value="3"/>
-    <property name="lid-action-on-battery" type="uint" value="1"/>
-    <property name="logind-handle-lid-switch" type="bool" value="true"/>
-    <property name="critical-power-level" type="uint" value="6"/>
-  </property>
-</channel>
